kustomize/globex/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: globex
  annotations:
  kubernetes.io/ingress.class: nginx
  ingress.kubernetes.io/app-root: /
spec:
  ingressClassName: nginx
  rules:
    - host: globex-prod.kubecon.sales-dev.codefresh.io
      http:
        paths:
          - path: /
            backend:
              service:
                name: globex
                port:
                  number: 80
            pathType: Prefix
